--- a/models/models_to_learn_housing.ipynb
+++ b/models/models_to_learn_housing.ipynb
@@ -1,13 +1,294 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "10412acc",
+   "metadata": {},
+   "source": [
+    "### Housing Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbad6c31",
+   "metadata": {},
+   "source": [
+    "#### Import Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "933a3bab",
+   "execution_count": 11,
+   "id": "c2462f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Models for Iris dataset"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a1692a",
+   "metadata": {},
+   "source": [
+    "#### Load California Housing Dataset from GitHub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "96c0d48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -122.23     37.88                41.0        880.0           129.0   \n",
+       "1    -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2    -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3    -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4    -122.25     37.85                52.0       1627.0           280.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value ocean_proximity  \n",
+       "0       322.0       126.0         8.3252            452600.0        NEAR BAY  \n",
+       "1      2401.0      1138.0         8.3014            358500.0        NEAR BAY  \n",
+       "2       496.0       177.0         7.2574            352100.0        NEAR BAY  \n",
+       "3       558.0       219.0         5.6431            341300.0        NEAR BAY  \n",
+       "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/ArnabMp/mlops/main/dataset/housing.csv\"\n",
+    "df = pd.read_csv(url)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164b6d1c",
+   "metadata": {},
+   "source": [
+    "#### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a05fa35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove NaN rows\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# Handle categorical column 'ocean_proximity' using one-hot encoding\n",
+    "df_encoded = pd.get_dummies(df, columns=[\"ocean_proximity\"], drop_first=True)\n",
+    "\n",
+    "# Define features and target\n",
+    "X = df_encoded.drop(\"median_house_value\", axis=1)\n",
+    "y = df_encoded[\"median_house_value\"]\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81880217",
+   "metadata": {},
+   "source": [
+    "#### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d1dc2cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(X_train, y_train)\n",
+    "y_pred_lin = lin_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02395c5a",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "670db914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_reg = DecisionTreeRegressor(random_state=42)\n",
+    "tree_reg.fit(X_train, y_train)\n",
+    "y_pred_tree = tree_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae609854",
+   "metadata": {},
+   "source": [
+    "#### Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a9605d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Linear Regression Results:\n",
+      "R² score: 0.6488402154431991\n",
+      "RMSE: 69297.71669113032\n",
+      "\n",
+      "🔹 Decision Tree Regressor Results:\n",
+      "R² score: 0.6688309933664495\n",
+      "RMSE: 67296.33003700843\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/env/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "/opt/miniconda3/envs/env/lib/python3.12/site-packages/sklearn/metrics/_regression.py:492: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"🔹 Linear Regression Results:\")\n",
+    "print(\"R² score:\", r2_score(y_test, y_pred_lin))\n",
+    "print(\"RMSE:\", mean_squared_error(y_test, y_pred_lin, squared=False))\n",
+    "\n",
+    "print(\"\\n🔹 Decision Tree Regressor Results:\")\n",
+    "print(\"R² score:\", r2_score(y_test, y_pred_tree))\n",
+    "print(\"RMSE:\", mean_squared_error(y_test, y_pred_tree, squared=False))"
    ]
   }
  ],
@@ -16,6 +297,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
